style.css
:root {
    --aton-colours-accent: #007387;

    --aton-colors-accent:  #007387;
    --aton-colors-accent-hover:  #11b0cc;

    --aton-colors-accent-rgb: 0, 115, 135;
}

.btn-primary {
  --bs-btn-bg: var(--aton-colors-accent);
  --bs-btn-border-color: var(--aton-colors-accent);
}

.btn-primary:hover {
  --bs-btn-hover-bg: var(--aton-colors-accent-hover);
  --bs-btn-hover-border-color: var(--aton-colors-accent-hover);
}

.btn-primary:active,
.btn-primary.active {
  --bs-btn-active-bg: var(--aton-colors-accent);
  --bs-btn-active-border-color: var(--aton-colors-accent);
}

.btn-primary:focus {
  --bs-btn-focus-bg: var(--aton-colors-accent);
  --bs-btn-focus-border-color: var(--aton-colors-accent);
}



/*OVERRIDE radio style*/

.customRadio input[type="radio"],
input[type="checkbox"] {
background-color: var(--aton-colors-accent)!important;
}

.customRadio input[type="radio"]:not(:checked),
input[type="checkbox"]:not(:checked) {

 /*background-color: transparent!important;*/
 background-color: #00000052!important;
}

input[type="checkbox"].checkbox-input {
    accent-color: var(--aton-colours-accent);
}

input[type="checkbox"].checkbox-input:checked {
    background-color: var(--aton-colours-accent) !important;
    border-color: var(--aton-colours-accent) !important;
    --bs-form-check-input-checked-bg-color: var(--aton-colours-accent);
    --bs-form-check-input-checked-border-color: var(--aton-colours-accent);
}

input[type="radio"].customRadio {
    accent-color: var(--aton-colours-accent);
}

input[type="radio"].customRadio:checked {
    background-color: var(--aton-colours-accent) !important;
    border-color: var(--aton-colours-accent) !important;
    --bs-form-check-input-checked-bg-color: var(--aton-colours-accent);
    --bs-form-check-input-checked-border-color: var(--aton-colours-accent);
}

/*Sidebar*/

/*btn
"top-3", "start-3","btn-sm", "rounded-circle"
*/

.toggleBtnOffCanvas{
width: 45px;
height: 45px;
background-color:  var(--bs-body-bg);
display: flex;
align-items: center;
justify-content: center;
/*#212529*/
}


#mainOffCanvas{
    /*background-color: var(--bs-body-bg)!important;*/
    background-color: rgba(var(--bs-body-bg-rgb), 0.9) !important;;
    max-height: 100vh;
    display: flex;
    flex-direction: column;
}

#mainOffCanvas .offcanvas-header {
    flex-shrink: 0;
    position: sticky;
    top: 0;
    z-index: 1;
    /*background-color: var(--bs-body-bg);*/
}

#mainOffCanvas .offcanvas-body {
    flex: 1 1 0;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

#mainOffCanvas .offcanvas-body > div:first-child {
    flex: 1 1 0;
    overflow-y: auto;
}

.toggleBtnOffCanvas img{
    width: 30px;
    height: 30px;
    margin:0px;
}

/*Convert in full centered in mobile:*/
@media screen and (max-width: 576px) { 
    .sidebar.right{
        margin: auto;
        width: calc( 100% - 16px);
        max-height: 100%;
        position: absolute;
    }
}

.sidebar {
    background-color: var(--bs-body-bg)!important;
    position: fixed;
    top: 8px;
    color: white;
    overflow-y: auto;
    padding: 15px;
    padding-bottom:6px;
}

.left
{
    left: 0;
    width: 450px;
    height: 100vh;
}

.right
{
    right: 8px;
    width: 300px;
    border-radius: 20px;
}

.sidebar h2 {
    text-align: left;
}

.sidebar ul {
    list-style-type: none;
    padding: 0;
}

.sidebar ul li {
    margin: 15px 0;
}

.sidebar ul li a {
    color: white;
    text-decoration: none;
    display: block;
}

.sidebar ul li a:hover {
    background-color: #575757;
    padding: 10px;
}

/*Header*/

/*Discovery*/

/*DiscoveryMainPanel*/
.noborder
{
    border: none!important;
}

.sideBlockMainContainer
{
     border: 1px solid #ccc;
    border-radius: 8px;
    padding: 10px;
}

.columnFlexContainer {
    margin-top: 5px;
    display: flex;
    width: 100%;
   
    overflow: hidden;
  /*  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
}

.columnFlexContainer .box {
    width: 50%;
   
    box-sizing: border-box;
}

.columnFlexContainer h2 {
    margin-top: 0;
}

.columnFlexContainer label {
    display: flex;
    align-items: center;
}

.columnFlexContainer label input[type="radio"] {
    margin-right: 10px;
}

.columnFlexContainer p {
    margin-top: 10px;
}

#discoveryAusiliarPanel
{
 /*   
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border: 1px solid #ccc;
    padding: 10px;*/
    display:none;
}

#discoverySelectionLayerPanel{

    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border: 1px solid #ccc;
    padding: 10px;
    display:none;
}

#discoverySelectionLayerPanel .columnFlexContainer  {
    flex-wrap: wrap;
}

#discoverySelectionLayerPanel .columnFlexContainer .box {
    min-width: 140px;
}

/*RADIUS SLIDER*/
.centered-container {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 10px;
    margin-top: 10px;
}

.flex-sliderContainer
{
    display: flex;
    align-items: center;
    justify-content: center;
}

.label-text {
    margin-right: 10px;
}

.slider {
    vertical-align: middle;
}

#slider{
    background-color: #cfcfcf;
    border-radius: 20px;
}


/*Select custom styles*/
.selectWrapper{
    border-radius:36px;
    display:inline-block;
    overflow:hidden;
    background:#cccccc;
    border:1px solid #cccccc;
  }
  .selectBox{
    width:140px;
    height:40px;
    border:0px;
    outline:none;
  }
/*POIsPanel*/
.flex_between
{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.flex_between_wrap
{
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    gap:10px;
}

.radiosTechinquesContainer
{
    display: flex;
    gap:10px;
}

.radioTechniqueItem
{
    display: flex;
    align-items: center;
    justify-content: left;
    gap: 3px;
}
.underlineTechnique
{
    height: 8px;
    width: 30px;
    border-radius: 5px;
}

.underlinedTechniqueContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
}
/*
.bulletTechnique
{
    height: 15px;
    width: 15px;
    border-radius: 8px;
}
*/

#POI_FilterPanel
{
    display: none;
}

/*POI List Items and Containers*/
.POIListContainer
{
    display: block;
}
.poiListItem
{
    display: flex;
    align-items: center;
    justify-content: left;
    /*border: 1px solid #ccc;*/
    border-radius: 20px;
    padding: 5px;
    padding-left:15px;
    background-color:rgba(var(--bs-body-bg-rgb), 0.7);
    margin-top: 5px;
    margin-bottom: 5px;
    min-height: 30px;

}
.poiListItem .tecsContainer
{
    flex-direction: column;
    display: flex;
    gap: 2px;
}

.POI_itemTitle
{
    margin-right: 10px;
}

.poiListItem_hovered
{
 background-color: rgb(178, 178, 178);
 color: rgba(var(--bs-body-bg-rgb), 1);
 cursor: pointer;
}

.poiListItem_clicked
{
 background-color: white;
 color: black;
}

.customDetails {
    padding: 10px;
}

.customSummary {
    align-items: center;
    cursor: pointer;
}

.summary-content {
    justify-content: space-between;
    width: 100%;
    align-items: center;
}

.left-text {
    margin-right: auto;
}

.right-text {
    float: right;
}

p {
    margin-top: 10px;
    padding: 10px;
}



/*TABS TECHNIQUES*/

/* Style the tab */
.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    
  }
  
  /* Style the buttons inside the tab */
  .tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    font-size: 17px;
    color: white;
  }
  
  /* Change background color of buttons on hover */
  .tab button:hover {
    background-color: #ddd;
    color: black;
  }
  
  /* Create an active/current tablink class */
  .tab button.active {
    background-color: #ccc;
    color: black;
  }
  
  /* Style the tab content */
  .tabcontent {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
  }



  /*Customize Tabs Placeholder*/
/* General Tabs Styling */
.r_tab::after,
.o_tab::after,
.b_tab::after {
    content: "";
    display: block;
    width: 30px;
    height: 8px;
    border-radius: 5px;
    margin-top: 5px;
    margin-left: auto;
    margin-right: auto;
}

/* Specific Colors */
.r_tab::after {
    background-color: #a80101;
}

.o_tab::after {
    background-color: #c05702;
}

.b_tab::after {
    background-color: #006172;
}





  .imgTechContainer{
    margin-top: 7px; /* to fix after bootstrap migration*/
    position: relative;
    overflow: hidden;
    border-radius: 8px;
  }

  .imgTech
  {
    width: 100%;
  }

.imgTech_fullScreenBtn{
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color:rgba(0, 0, 0, 0.5);
    opacity: 0;
    background-image: url(./res/icons/fullscreen_white.svg);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 50px;
    transition: all 0.2s;
}

.imgTech_fullScreenBtn:hover{
    opacity: 1;
    cursor: pointer;
}

.imgTech_fullScreenContainer{
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.imgTech_fullScreenContainer img{
    height: 100%;
}

.closeBtn {
    background-image: url(./res/icons/close-button.svg);
    width: 35px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    height: 35px;
    cursor: pointer;
}

.mulax-toolbar-top {
    top: 6px;
    right: 6px;
    display: inline-block;
    position: absolute;
}

.mulax-btn {
    background-color: rgba(var(--bs-body-bg-rgb), 0.8);
}

.mulax-btn:hover {
    background-color: var(--aton-colors-accent);
}

.mulax-btn-main {
    background-color: black;
    border: solid 2px black;
}

.mulax-btn-main:hover {
    background-color: black;
    border: solid 2px var(--aton-colors-accent);
}

